--- a/NaturalLanguageProcessing/NaturalLanguageProcessing.csproj
+++ b/NaturalLanguageProcessing/NaturalLanguageProcessing.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextData\Sentence.cs" />
     <Compile Include="TextData\TextDataSet.cs" />
+    <Compile Include="Tokens\Tokens.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
